--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "homepage": "https://SerhiyStepanov.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "modern-normalize": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
